--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "jquery": "^3.6.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "homepage": "https://alex05d.github.io/newRepo"
   },
   "scripts": {
     "start": "react-scripts start",
